Se agregan mejoras a control de excepciones en los endpoints, se actualiza documentacion con scribe, y se agregan postaman collection y sql dump.
