# src/public/docs/openapi.yaml
@@ -527,6 +527,18 @@ paths:
                   nationality:
                     type: string
                     example: American
+        400:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'Invalid ID. The ID must be a numeric value.'
+                properties:
+                  message:
+                    type: string
+                    example: 'Invalid ID. The ID must be a numeric value.'
         404:
           description: ''
           content:
@@ -721,7 +733,7 @@ paths:
         in: path
         name: id
         description: 'Author ID.'
-        example: 3
+        example: 17
         required: true
         schema:
           type: integer
@@ -1091,6 +1103,18 @@ paths:
                       name:
                         type: string
                         example: 'Author Name'
+        400:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'Invalid ID. The ID must be a numeric value.'
+                properties:
+                  message:
+                    type: string
+                    example: 'Invalid ID. The ID must be a numeric value.'
         404:
           description: ''
           content:
@@ -1142,7 +1166,7 @@ paths:
                   title: 'Updated Book Title'
                   isbn: 123-4567890123
                   published_date: '2022-01-01'
-                  author_id: 2
+                  author_id: 1
                 properties:
                   id:
                     type: integer
@@ -1158,7 +1182,7 @@ paths:
                     example: '2022-01-01'
                   author_id:
                     type: integer
-                    example: 2
+                    example: 1
         404:
           description: ''
           content:
@@ -1223,32 +1247,25 @@ paths:
                   nullable: false
                 isbn:
                   type: string
-                  description: 'Optional The updated ISBN of the book.'
+                  description: 'Optional The ISBN of the book.'
                   example: 123-4567890123
                   nullable: false
                 published_date:
                   type: date
-                  description: 'Optional The updated publication date of the book.'
+                  description: 'Optional The publication date of the book.'
                   example: '2022-01-01'
                   nullable: false
                 author_id:
                   type: integer
-                  description: 'Optional The ID of the updated author.'
-                  example: 2
+                  description: 'Optional The ID of the author.'
+                  example: 1
                   nullable: false
       security: []
     delete:
       summary: 'Delete a book.'
       operationId: deleteABook
       description: ''
-      parameters:
-        -
-          in: header
-          name: Accept-Version
-          description: ''
-          example: 'string required The version of the API to use. Example: v1'
-          schema:
-            type: string
+      parameters: []
       responses:
         200:
           description: ''
@@ -1262,6 +1279,18 @@ paths:
                   message:
                     type: string
                     example: 'Book deleted successfully.'
+        400:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'Invalid ID. The ID must be numeric.'
+                properties:
+                  message:
+                    type: string
+                    example: 'Invalid ID. The ID must be numeric.'
         404:
           description: ''
           content:
@@ -1294,7 +1323,7 @@ paths:
         in: path
         name: id
         description: 'Book ID.'
-        example: 10
+        example: 18
         required: true
         schema:
           type: integer
